force-app/main/default/objects/NS_AssociatedAccount__c/NS_AssociatedAccount__c.object-meta.xml
<CustomObject>
    <description>Associated Accounts related to a contact</description>
    <label>Associated Account</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Associated Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>