force-app/main/default/objects/NS_AssociatedAccount__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>This field will hold the record type of the Associated Account</description>
    <formula>NS_AccountName__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>