force-app/main/default/objects/NS_AssociatedAccount__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>1st</fullName>
                <label>1st Shift</label>
            </value>
            <value>
                <fullName>2nd</fullName>
                <label>2nd Shift</label>
            </value>
            <value>
                <fullName>3rd</fullName>
                <label>3rd Shift</label>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>