force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_AccName__c.field-meta.xml
<CustomField>
    <fullName>NS_AccName__c</fullName>
    <description>This field captures data from Account Name lookup field</description>
    <label>Acc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>