force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_AccountName__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Associated_Accounts1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>