force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_AccountRole__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountRole__c</fullName>
    <description>It defines what is the account role the related contact is having for a particular account.</description>
    <label>Account Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>