force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_CellPhone__c.field-meta.xml
<CustomField>
    <fullName>NS_CellPhone__c</fullName>
    <description>It populates value from Contact Cell Phone</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>