force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_ConName__c.field-meta.xml
<CustomField>
    <fullName>NS_ConName__c</fullName>
    <description>This field captures data from contact name lookup field</description>
    <label>Con Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>