force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactEmail__c</fullName>
    <description>It Populates value from contact Email.</description>
    <formula>HYPERLINK(&quot;mailto:&quot;+NS_ContactName__r.Email,NS_ContactName__r.Email,&quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>