force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_ContactName__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactName__c</fullName>
    <description>Contact Related to a particular account</description>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <errorMessage>Contact must be an Active Contact.</errorMessage>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Associated Accounts</relationshipLabel>
    <relationshipName>Associated_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>