force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_ContactRole__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactRole__c</fullName>
    <description>It pulls the Role of associated Contact</description>
    <formula>NS_ContactName__r.NS_ContactRole__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role</label>
    <type>Text</type>
</CustomField>