force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_ContactStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactStatus__c</fullName>
    <description>It Populates value from contact Status</description>
    <formula>TEXT(NS_ContactName__r.NS_ContactStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>