force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_InternalContact__c.field-meta.xml
<CustomField>
    <fullName>NS_InternalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of Phase 2 development.</description>
    <inlineHelpText>Please select this checkbox if this Contact is an employee of Norfolk Southern.</inlineHelpText>
    <label>Internal Contact</label>
    <type>Checkbox</type>
</CustomField>