force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_OtherPhone1__c.field-meta.xml
<CustomField>
    <fullName>NS_OtherPhone1__c</fullName>
    <description>It Populates value from contact Other Phone 1</description>
    <label>Other Phone 1</label>
    <type>Phone</type>
</CustomField>