force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_OtherPhone2__c.field-meta.xml
<CustomField>
    <fullName>NS_OtherPhone2__c</fullName>
    <description>It populates value from contact Other Phone 2</description>
    <label>Other Phone 2</label>
    <type>Phone</type>
</CustomField>