force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_PreferredPhone__c.field-meta.xml
<CustomField>
    <fullName>NS_PreferredPhone__c</fullName>
    <description>It Populates value from contact Preferred Phone</description>
    <formula>NS_ContactName__r.NS_Preferred_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Phone</label>
    <type>Text</type>
</CustomField>