force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_PrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_PrimaryAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To determine if Associated Account associated with contact is primary.</description>
    <label>Primary Account</label>
    <type>Checkbox</type>
</CustomField>