force-app/main/default/objects/NS_AssociatedAccount__c/fields/NS_WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>NS_WorkPhone__c</fullName>
    <description>It populates value from contact Work Phone</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>