force-app/main/default/objects/NS_AssociatedAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NS_AccountName__c</columns>
    <columns>NS_ContactName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>